--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav id="nawigacja">
         <ul>
-            <li><a href="#">Sklep</a></li>
-            <li><a href="#">Dostawa</a></li>
-            <li><a href="#">Rejestracja</a></li>
+            <li><a href="index.html">Sklep</a></li>
+            <li><a href="index.html">Dostawa</a></li>
+            <li><a href="index.html">Rejestracja</a></li>
         </ul>
     </nav>
     <div class="container">
